@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-4.3
-Date: 2010-10-16
+Version: 0.5-4.4
+Date: 2010-10-22
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.11.0), methods
